--- a/index.css
+++ b/index.css
@@ -16,7 +16,6 @@ header{
 }
 #film{
     margin-top: 50px;
-    
     padding:0px;
     display:flex;
     flex-direction: row;
@@ -25,7 +24,7 @@ header{
 }
 
 h1{
-   margin-left:42px;
+    margin-left:42px;
     font-size:42.79px;
     color:#ffffff;
 }
@@ -35,36 +34,67 @@ h1{
     border:none;
     background-color:transparent;
     color:white;  
-    height:20px 
+    height:20px; 
+    text-decoration: none;
+}
+#watchlist-button:hover{
+    color:gray;
 }
 #search-bar-button{
     display:flex;
     justify-content: center;
     border:0px;
-    margin-top: 36px;
+    margin-top: 30px;
     padding:0px;
+   
 }
 .search-input{
-    width:340px;
-    height:25px;
+    width:342px;
+    height:38px;
     color:#a5a5a5;
     background-color:#2e2e2f;
     border:none;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
 }
 #search-button{
     color:#ffffff;
     background-color:#4b4b4b;
     border:0px;
     width:120px;
+    height:38px;
     margin:0px;
     padding:0px;
     font-size:12px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+#search-button:hover{
+    color:gray;
 }
 #exploring-icon{
     width:148px;
     height:90px;
     margin-top:190px;
-    
+}
+
+#no-response{
+    margin:0 auto;
+    margin-top:220px;
+    color:#787878;
+    font-size: 20px;
+    font-weight:bold;
+    width:321px;
+}
+
+#no-response-watchlist{
+        margin:0 auto;
+        margin-top:220px;
+        color:#787878;
+        font-size: 20px;
+        font-weight:bold;
+        width:321px;
+        margin-bottom: 10px;
 }
 #movie-list{
     width:462px;
@@ -74,13 +104,18 @@ h1{
 }
 #new-movie-list{
     display:flex;
-
+    border-bottom: 1px solid rgba(128, 128, 128, 0.541);
+}
+#watchlist-list{
+    display:flex;
+    border-bottom: 2px solid rgb(255, 255, 255);
 }
 #movie-poster{
     margin-top:30px;
     margin-right:30px;
     width:99px;
     height:147.41px;
+    margin-bottom:25px;
 }
 #title-synopsis{
     display:flex;
@@ -108,6 +143,9 @@ h1{
     color:#ffffff;
     border:none;
 }
+#watchlist-add-button:hover{
+    color:gray;
+}
 #time-genre-button{
     display:flex;
     justify-content: space-between;
@@ -119,4 +157,15 @@ h1{
 #plot{
     color:gray;
     font-size:14px;
+}
+#another-search-button{
+    background-color: transparent;
+    color:#ffffff;
+    border:none;  
+    font-weight:bold;
+    font-size:14px;
+    text-decoration: none;
+}
+#another-search-button:hover{
+    color:gray;
 }
